--- a/package.json
+++ b/package.json
@@ -3,17 +3,26 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vuedx-typecheck . && vite build"
+    "build": "vuedx-typecheck . && vite build",
+    "lint:eslint": "eslint --fix --ext \"src/**/*.{vue,less,css,scss}\""
   },
   "dependencies": {
+    "eslint-config-prettier": "^7.1.0",
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "@vitejs/plugin-vue": "^1.0.4",
     "@vitejs/plugin-vue-jsx": "^1.0.1",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.4.1",
     "@vuedx/typescript-plugin-vue": "^0.4.1",
+    "eslint": "^7.17.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-typescript": "^0.14.0",
+    "eslint-plugin-vue": "^7.4.1",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3",
     "vite": "^2.0.0-beta.5"
   }
