--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-plugin-vue": "^7.4.1",
     "prettier": "^2.2.1",
+    "sass": "^1.32.0",
     "typescript": "^4.1.3",
     "vite": "^2.0.0-beta.5"
   }
